2010-08-10  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Xan Lopez.

        [GTK] http/tests/media/video-cookie.html fails
        https://bugs.webkit.org/show_bug.cgi?id=42240

        * platform/gtk/Skipped: unskipped test
2010-08-10  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] http/tests/media/video-cookie.html fails
        https://bugs.webkit.org/show_bug.cgi?id=42240

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setAlwaysAcceptCookies): create the
        SoupCookieJar if it does not exist. Otherwise the accept policy
        won't be set.

Canonical link: https://commits.webkit.org/55915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65113 268f45cc-cd09-0410-ab3c-d52691b4dbfc